// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/platform/azure/azure-helper getAzureBranchObj should get the branch object 1`] = `
{
  "name": "refs/heads/branchName",
  "oldObjectId": "132",
}
`;

exports[`modules/platform/azure/azure-helper getAzureBranchObj should get the branch object when ref missing 1`] = `
{
  "name": "refs/heads/branchName",
  "oldObjectId": "0000000000000000000000000000000000000000",
}
`;

exports[`modules/platform/azure/azure-helper getCommitDetails should get commit details 1`] = `
{
  "parents": [
    "123456",
  ],
}
`;

exports[`modules/platform/azure/azure-helper getFile should return the file content because it is not a json 1`] = `"{"hello"= "test"}"`;

exports[`modules/platform/azure/azure-helper getRef should get the ref with full ref name 1`] = `
[
  {
    "objectId": "132",
  },
]
`;

exports[`modules/platform/azure/azure-helper getRef should get the ref with short ref name 1`] = `
[
  {
    "objectId": 132,
  },
]
`;
